; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/blocklayout/extr_blocklayout.c_bl_end_io_write.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/blocklayout/extr_blocklayout.c_bl_end_io_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bio = type { i64, %struct.parallel_io* }
%struct.parallel_io = type { %struct.nfs_pgio_header* }
%struct.nfs_pgio_header = type { i32, i32 }

@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bio*)* @bl_end_io_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bl_end_io_write(%struct.bio* %0) #0 {
  %2 = alloca %struct.bio*, align 8
  %3 = alloca %struct.parallel_io*, align 8
  %4 = alloca %struct.nfs_pgio_header*, align 8
  store %struct.bio* %0, %struct.bio** %2, align 8
  %5 = load %struct.bio*, %struct.bio** %2, align 8
  %6 = getelementptr inbounds %struct.bio, %struct.bio* %5, i32 0, i32 1
  %7 = load %struct.parallel_io*, %struct.parallel_io** %6, align 8
  store %struct.parallel_io* %7, %struct.parallel_io** %3, align 8
  %8 = load %struct.parallel_io*, %struct.parallel_io** %3, align 8
  %9 = getelementptr inbounds %struct.parallel_io, %struct.parallel_io* %8, i32 0, i32 0
  %10 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %9, align 8
  store %struct.nfs_pgio_header* %10, %struct.nfs_pgio_header** %4, align 8
  %11 = load %struct.bio*, %struct.bio** %2, align 8
  %12 = getelementptr inbounds %struct.bio, %struct.bio* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %32

15:                                               ; preds = %1
  %16 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %4, align 8
  %17 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %25, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* @EIO, align 4
  %22 = sub nsw i32 0, %21
  %23 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %4, align 8
  %24 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %23, i32 0, i32 1
  store i32 %22, i32* %24, align 4
  br label %25

25:                                               ; preds = %20, %15
  %26 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %4, align 8
  %27 = getelementptr inbounds %struct.nfs_pgio_header, %struct.nfs_pgio_header* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @pnfs_set_lo_fail(i32 %28)
  %30 = load %struct.nfs_pgio_header*, %struct.nfs_pgio_header** %4, align 8
  %31 = call i32 @bl_mark_devices_unavailable(%struct.nfs_pgio_header* %30, i32 1)
  br label %32

32:                                               ; preds = %25, %1
  %33 = load %struct.bio*, %struct.bio** %2, align 8
  %34 = call i32 @bio_put(%struct.bio* %33)
  %35 = load %struct.parallel_io*, %struct.parallel_io** %3, align 8
  %36 = call i32 @put_parallel(%struct.parallel_io* %35)
  ret void
}

declare dso_local i32 @pnfs_set_lo_fail(i32) #1

declare dso_local i32 @bl_mark_devices_unavailable(%struct.nfs_pgio_header*, i32) #1

declare dso_local i32 @bio_put(%struct.bio*) #1

declare dso_local i32 @put_parallel(%struct.parallel_io*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
